# CMakeSeries

./: README.md
cmakepractice/: CMakeLists.txt  main.cpp
cmakepractice01/source/: CMakeLists.txt  main.cpp
cmakepractice01/source/include/: dog.h
cmakepractice01/source/src/: dog.cpp  operations.cpp
cmakepractice02/source/: CMakeLists.txt
